# time-series-information-criterion

./: README.md  hello.py  pyproject.toml
lib/: data.py  experiment.py  information_criteria.py  models.py  utils.py
notebooks/: 01_first_trial.ipynb  02_second_trial_if_num_chain_is_the_same.ipynb  tutorial.ipynb
