[project]
name = "time-series-information-criterion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.19.0",
    "numpy>=2.1.1",
    "pymc>=5.15.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "numpyro>=0.15.2",
    "statsmodels>=0.14.2",
]
